REGRESSION(262749@main) [GraphicsLayerWC] WCContentBufferIdentifier should use ObjectIdentifierThreadSafeAccessTraits https://bugs.webkit.org/show_bug.cgi?id=255195

Unreviewed crash fix.

After 262749@main (bug#254873) added an assertion checking the thread
is the main thread to generateIdentifierInternal, WinCairo was
crashing for WebGL tests.

* Source/WebKit/GPUProcess/graphics/wc/WCContentBuffer.h:
Use WCContentBufferIdentifier::generateThreadSafe.
* Source/WebKit/Shared/wc/WCContentBufferIdentifier.h:
Use ObjectIdentifierThreadSafeAccessTraits.

Canonical link: https://commits.webkit.org/262754@main